Update to remove links and nfo

--- a/pages/games/palworld/index.html
+++ b/pages/games/palworld/index.html
@@ -23,39 +23,25 @@
         <div class="content">
             <p class="bold">Palworld [Reapr Repack]</p>
             <div class="gameimages">
-                <img src="../../../assets/games/palworldgame.jpg" alt="Slime Rancher" href="" class="image">
+                <img src="../../../assets/games/palworldgame.jpg">
             </div>
             <div class="game-info">
                 <p>
-                    <a class="nfo-button" href="info.png" target="_blank">NFO</a>
+                    <h2 class="bold">No NFO</h2>
                 </p>
                 <p class="bold">Game Info:</p>
                 <span class="bold">Based on:</span> <span>PALWORLD.RELEASE.REAPR.iso [24,233,915,307 bytes]</span>
                 <p>
-                    <span class="bold">Game version: </span><span>v1.4.4</span>
+                    <span class="bold">Game version: </span><span>vX.X.X.X</span>
                 </p>
                 <p>
-                    <span class="bold">Repack size: </span><span>520 MB</span>
+                    <span class="bold">Repack size: </span><span>X MB</span>
                 </p>
                 <p class="bold"><span>Mirrors:</span></p>
                 <p>
-                    <a class="mirror-button-onedrive" href="https://1drv.ms/f/s!AiKAzTZR_T7lgQIr0O7ZR9Hmc1vB?e=h5DTQp" target="_blank">Onedrive</a>
+                    <h2 class="bold">Not repacked yet. Please wait for a repack.</h2>
                 </p>
-                <p>
-                    <a class="mirror-button-mediafire" href="https://www.mediafire.com/folder/44g2kiwqij9c6/SR_%5BRR%5D_%5BM12%5D" target="_blank">Mediafire</a>
-                </p>
-                <p>
-                    <a class="mirror-button-gdrive" href="https://drive.google.com/drive/folders/1SRExpjENRWLl599-cs-gRsPK9wUHwK1q?usp=sharing" target="_blank">Google drive</a>
-                </p>
-                <p>
-                    <a class="mirror-button-doodrive" href="https://doodrive.com/f/6oo8yk" target="_blank">DooDrive</a>
-                </p>
-                <p>
-                    <a class="mirror-button-qiwi" href="https://qiwi.gg/folder/66b17433995482c90514a9e6" target="_blank">Qiwi</a>
-                </p>
-                <p>
-                    <a class="mirror-button-mega" href="https://mega.nz/folder/MBAjnYqa#qWiH3aYdC9_VYT135lf0ew" target="_blank">Mega</a>
-                </p>
+
             </div>
         </div>
     </main>
