Update to fix text on mirrors for slrchr

--- a/pages/games/slimerancher/index.html
+++ b/pages/games/slimerancher/index.html
@@ -39,13 +39,13 @@
                 </p>
                 <p class="bold"><span>Mirrors:</span></p>
                 <p>
-                    <a class="mirror-button-onedrive" href="https://1drv.ms/f/s!AiKAzTZR_T7lgQIr0O7ZR9Hmc1vB?e=h5DTQp" target="_blank">Onedrive</a>
+                    <a class="mirror-button-onedrive" href="https://1drv.ms/f/s!AiKAzTZR_T7lgQIr0O7ZR9Hmc1vB?e=h5DTQp" target="_blank">Onedrive (Updated)</a>
                 </p>
                 <p>
                     <a class="mirror-button-mediafire" href="https://www.mediafire.com/folder/44g2kiwqij9c6/SR_%5BRR%5D_%5BM12%5D" target="_blank">Mediafire</a>
                 </p>
                 <p>
-                    <a class="mirror-button-gdrive" href="https://drive.google.com/drive/folders/1SRExpjENRWLl599-cs-gRsPK9wUHwK1q?usp=sharing" target="_blank">Google drive</a>
+                    <a class="mirror-button-gdrive" href="https://drive.google.com/drive/folders/1SRExpjENRWLl599-cs-gRsPK9wUHwK1q?usp=sharing" target="_blank">Google drive (Updated)</a>
                 </p>
                 <p>
                     <a class="mirror-button-doodrive" href="https://doodrive.com/f/6oo8yk" target="_blank">DooDrive</a>
@@ -54,7 +54,7 @@
                     <a class="mirror-button-qiwi" href="https://qiwi.gg/folder/66b17433995482c90514a9e6" target="_blank">Qiwi</a>
                 </p>
                 <p>
-                    <a class="mirror-button-mega" href="https://mega.nz/folder/MBAjnYqa#qWiH3aYdC9_VYT135lf0ew" target="_blank">Mega</a>
+                    <a class="mirror-button-mega" href="https://mega.nz/folder/MBAjnYqa#qWiH3aYdC9_VYT135lf0ew" target="_blank">Mega (Updated)</a>
                 </p>
             </div>
         </div>
